--- a/SportStore/SportStore.WebUI/Web.config
+++ b/SportStore/SportStore.WebUI/Web.config
@@ -11,6 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization culture="ru-RU" uiCulture="ru-RU"/>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -56,4 +57,11 @@
       <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
+  
+  <connectionStrings>
+    <add name="EFDbContext"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SportStore;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>  
+  </connectionStrings>
+  
 </configuration>
