--- a/SportStore/SportStore.Domain/SportStore.Domain.csproj
+++ b/SportStore/SportStore.Domain/SportStore.Domain.csproj
@@ -73,6 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IProductsRepository.cs" />
+    <Compile Include="Concrete\EFDbContext.cs" />
+    <Compile Include="Concrete\EFDProductRepository.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
