--- a/SportStore/SportStore.WebUI/Web.config
+++ b/SportStore/SportStore.WebUI/Web.config
@@ -4,6 +4,10 @@
    https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -11,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <globalization culture="ru-RU" uiCulture="ru-RU"/>
+    <globalization culture="ru-RU" uiCulture="ru-RU" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -59,9 +63,12 @@
   </system.codedom>
   
   <connectionStrings>
-    <add name="EFDbContext"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SportStore;Integrated Security=True"
-         providerName="System.Data.SqlClient"/>  
+    <add name="EFDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SportStore;Integrated Security=True" providerName="System.Data.SqlClient" />  
   </connectionStrings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
   
 </configuration>
