--- a/SportStore/SportStore.Domain/SportStore.Domain.csproj
+++ b/SportStore/SportStore.Domain/SportStore.Domain.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Abstract\IProductsRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFDProductRepository.cs" />
+    <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
