--- a/SportStore/SportStore.WebUI/Web.config
+++ b/SportStore/SportStore.WebUI/Web.config
@@ -14,6 +14,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="Email.WriteAsFile" value="true"/>
+    <add key="ClientValidationEnabled" value="false"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="false"/>
   </appSettings>
   <system.web>
     <globalization culture="ru-RU" uiCulture="ru-RU" />
