--- a/SportStore/SportStore.UnitTests/SportStore.UnitTests.csproj
+++ b/SportStore/SportStore.UnitTests/SportStore.UnitTests.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminSecurityTests.cs" />
     <Compile Include="AdminTests.cs" />
     <Compile Include="CartTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
