--- a/SportStore/SportStore.UnitTests/SportStore.UnitTests.csproj
+++ b/SportStore/SportStore.UnitTests/SportStore.UnitTests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="AdminSecurityTests.cs" />
     <Compile Include="AdminTests.cs" />
     <Compile Include="CartTests.cs" />
+    <Compile Include="ImageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest1.cs" />
   </ItemGroup>
